style: refactor utils-io packages and class names